# auto-backup-wsl

./: .gitignore  LICENSE  MANIFEST.in  README.md  example.py  pyproject.toml  setup.py
auto_backup/: __init__.py  cli.py  config.py  manager.py
auto_backup_wsl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
